# kvdb

./: .gitignore  CMakeLists.txt  README.md  kvdb_vc2015.sln
projects/vc2015/main/kvdb-cli/: kvdb-cli.vcxproj  kvdb-cli.vcxproj.filters
projects/vc2015/main/kvdb-server/: kvdb-server.vcxproj  kvdb-server.vcxproj.filters
projects/vc2015/main/libkvdb/: libkvdb.vcxproj  libkvdb.vcxproj.filters
src/main/kvdb/: all.cpp  all.h
src/main/kvdb-cli/: kvdb-cli.cpp
src/main/kvdb-cli/client/: ClientContext.h  Common2.h  HandleClientResponse.cpp  HandleClientResponse.h  KvdbClient.h  KvdbClientApp.cpp  KvdbClientApp.h  KvdbClientConfig.h  SendClientRequest.h  common.h
src/main/kvdb-cli/client/common/: cmd_utils.h
src/main/kvdb-server/: asio_connection.hpp  asio_session.hpp  async_aiso_echo_serv_ex.hpp  async_asio_echo_serv.hpp  common.h  io_service_pool.hpp  kvdb-server.cpp
src/main/kvdb-server/common/: aligned_atomic.hpp
src/main/kvdb-server/http_server/: asio_http_session.hpp  async_asio_http_server.hpp
src/main/kvdb-server/server/: Connection.cpp  Connection.h  Connection2.cpp  Connection2.h  ConnectionContext.h  ConnectionManager.cpp  ConnectionManager.h  HeaderField.h  IoServicePool.h  KvdbConnection.cpp  KvdbConnection.h  KvdbServer.h  Request.h  Request2.h  RequestHandler.cpp  RequestHandler.h  RequestParser.cpp  RequestParser.h  Response.cpp  Response.h  WokerThread.h  asio_session.h  common.h  connection.cpp  connection.h  connection_manager.cpp  connection_manager.h  header_field.h  io_service_pool.h  kvdb_connection.cpp  kvdb_connection.h  kvdb_server.h  request.h  request_handler.cpp  request_handler.h  request_parser.cpp  request_parser.h  response.cpp  response.h
src/main/kvdb-server/server/common/: boost_asio_msvc.h  cmd_utils.h
src/main/kvdb/asio/: AsioHacksFwd.h  DeadlineTimer.h  IoContext.h  IpAddress.h  IpNetwork.h  Resolver.h  Strand.h
src/main/kvdb/basic/: compiler.h  inttypes.h  platform.h  stddef.h  stdint.h  stdsize.h
src/main/kvdb/client/: LoginState.h
src/main/kvdb/common/: aligned_atomic.h
src/main/kvdb/core/: Application.h  DataType.h  Message.h  MessageDefine.h  MessageHeader.h  MessageType.h  Messages.h  MessagesDefine.h  Opcode.h  Packet.h  Request.h  Response.h  StatusCode.h  Variant.h
src/main/kvdb/hash/: Dictionary.h  DictionaryOld.h  DictionaryTraits.h  Hash.h  HashHelper.h  crc32c.h
src/main/kvdb/jstd/: StringRef.h  StringRefList.h  iterator.h  nothrow_new.h  string_iterator.h  string_utils.h  strlen.h
src/main/kvdb/server/: CommandType.h  ServerStatus.h
src/main/kvdb/store/: Slice.h
src/main/kvdb/stream/: Allocator.h  BasicPrepareStream.h  BasicStream.h  ByteBuffer.h  ConstBuffer.h  DataType.h  InputPacketStream.h  InputStream.h  MemoryBuffer.h  NetPacket.h  OutputPacketStream.h  OutputStream.h  PackagedInputStream.h  PackagedOutputStream.h  Packet.h  ParseResult.h  ParseStatus.h  PrepareInputStream.h  PrepareOutputPacketStream.h  PrepareOutputStream.h  ReadWriteResult.h  StreamBuffer.h  StreamStorage.h  Variant.h
src/main/kvdb/support/: Power2.h  PowerOf2.h  SSEHelper.h  StopWatch.h  bitscan_forward.h  bitscan_reverse.h  popcnt.h
src/main/kvdb/system/: Console.h
src/main/kvdb/test/: Assert.h  Expert.h  FloatEpsinon.h  Test.h
src/main/kvdb/utils/: Optional.h
